Some new random stuff. Working on a new drop command for images in HTML and CSS Smart indent macro is the same as the Indent Line TextMate Feature, except it indents blank lines too.

--- a/info.plist
+++ b/info.plist
@@ -126,6 +126,7 @@
 	<string> subtleGradient</string>
 	<key>ordering</key>
 	<array>
+		<string>3F45B2D4-FC42-4282-8FD5-8A74223AFCBC</string>
 		<string>6075462F-E70F-4807-B42C-42AE47FEAFDC</string>
 		<string>1625EC42-91A6-4D30-B2C6-4EDB9CB5E2D6</string>
 		<string>60BCB823-BF46-420B-8572-360A8542E705</string>
@@ -143,6 +144,7 @@
 		<string>5185051A-23D3-41FF-8A08-230E541599AA</string>
 		<string>D970A97A-B860-4720-B1D8-692111A2DCFD</string>
 		<string>DAF82F0A-CF22-4DFF-9C78-BFEC5999D9E9</string>
+		<string>C7912C8C-9DEA-433A-9007-DBE5710351EE</string>
 		<string>9E71CD7E-E016-49FA-855D-AC3122D4BCED</string>
 		<string>A9356A1B-0E34-4C88-91D9-C3F8D1ACA64F</string>
 		<string>CB92FA77-3F28-4590-B1E7-62E9FF109759</string>
@@ -193,6 +195,7 @@
 		<string>D8D44771-B0EC-4B08-B8ED-ECF584552CC3</string>
 		<string>F7AE8F87-271C-4DCA-A2B9-7FD814C7B3DB</string>
 		<string>03E509EC-FFB4-4653-A73C-2898C3D2C0A8</string>
+		<string>C2137730-37C7-44F3-8CB6-631D7AD96F4E</string>
 		<string>CD939B18-12F5-47E4-9D45-DB0682C2BFCA</string>
 		<string>B7406903-A74F-48C0-A5E1-31D67BA094E3</string>
 		<string>F8537692-946C-4EC9-A2DF-3CA6990190E2</string>
@@ -244,6 +247,9 @@
 		<string>0327A901-F512-423B-B5F9-7308AB96896A</string>
 		<string>D9494027-60C6-45BB-90F6-D2ED798D10F8</string>
 		<string>6A21D5E1-915B-448D-BE01-2C9D0149AA48</string>
+		<string>C2A2079F-6596-4BCC-8764-ABB86D03683C</string>
+		<string>393D06C0-7D5B-4F1B-8179-F56C040621E4</string>
+		<string>0D04CADD-BEF5-4B89-90A8-1CA0B3766332</string>
 	</array>
 	<key>uuid</key>
 	<string>3752EFF8-5401-46A5-AF20-07087E3933B2</string>
