run ruby in the live preview if you have the environment variable WEB_PREVIEW_RUBY=='run' include mootools in the run js command if the scope contains 'mootools' disabled smart indent removed the shortcut for "Comment Selection Properly IMHO" fixed "no quit" bash error added a couple of things: API List to Unique Keywords Convert Lines to Array Items

--- a/info.plist
+++ b/info.plist
@@ -94,6 +94,7 @@
 					<string>------------------------------------</string>
 					<string>6A9E56DD-F1D2-45E5-8668-4328D7F44394</string>
 					<string>611AD7DF-30D8-4BD7-9C25-275D933B8ECD</string>
+					<string>------------------------------------</string>
 				</array>
 				<key>name</key>
 				<string>Super Handy!</string>
@@ -309,6 +310,8 @@
 					<string>0327A901-F512-423B-B5F9-7308AB96896A</string>
 					<string>------------------------------------</string>
 					<string>DAC168F3-A5BB-4B68-AF70-B60F9D9F791E</string>
+					<string>E69093C6-B78F-41A1-A304-7D1C0C614045</string>
+					<string>168AC018-81E3-4E53-AF5E-F819723B21DA</string>
 					<string>------------------------------------</string>
 					<string>934C4D1C-4B80-4876-8D6A-AE9AF02B6143</string>
 				</array>
@@ -458,6 +461,8 @@
 		<string>C2A2079F-6596-4BCC-8764-ABB86D03683C</string>
 		<string>393D06C0-7D5B-4F1B-8179-F56C040621E4</string>
 		<string>0D04CADD-BEF5-4B89-90A8-1CA0B3766332</string>
+		<string>E69093C6-B78F-41A1-A304-7D1C0C614045</string>
+		<string>168AC018-81E3-4E53-AF5E-F819723B21DA</string>
 	</array>
 	<key>uuid</key>
 	<string>3752EFF8-5401-46A5-AF20-07087E3933B2</string>
