--- a/info.plist
+++ b/info.plist
@@ -342,6 +342,7 @@
 	<string> subtleGradient</string>
 	<key>ordering</key>
 	<array>
+		<string>F374D795-04B1-46D6-AE45-8C329396FEAB</string>
 		<string>93C57002-422B-4693-BE73-79C5C2016E7A</string>
 		<string>BFA10BBE-6043-41CE-9629-B3A3B59C3A2C</string>
 		<string>1FF09E1A-CE96-4B55-9D02-6B3EA750C903</string>
@@ -465,6 +466,7 @@
 		<string>E69093C6-B78F-41A1-A304-7D1C0C614045</string>
 		<string>168AC018-81E3-4E53-AF5E-F819723B21DA</string>
 		<string>94053FBE-FA26-470C-A91D-A19BE266545D</string>
+		<string>741EAEB8-F871-425D-91F9-A4B087FEDFFB</string>
 	</array>
 	<key>uuid</key>
 	<string>3752EFF8-5401-46A5-AF20-07087E3933B2</string>
